[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Luciano Correia <luciano.correia@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.3.2"
actix-http = "2.2.1"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-rt = "2.2.0"
tokio = { version = "1.12.0", features = ["macros"] }
